# ad-eventa-kafka

./: .env.example  .gitignore  BEAUTIFUL_DASHBOARD.md  COMPLETE_CHANGES.md  DASHBOARD_READY.md  DASHBOARD_SETUP.md  FILE_INDEX.md  INSTANT_ACCESS.md  LATE_EVENTS_GUIDE.md  NO_DATA_ISSUE_SOLVED.md  PARQUET_ICEBERG_SETUP.md  QUICK_START.md  README.md  README_DASHBOARD.md  SETUP_SUMMARY.txt  WATERMARKING_IMPLEMENTATION.md  WATERMARKING_SIMPLE.md  WATERMARKING_SUMMARY.md  WINDOWING_COMPARISON.txt  WINDOWING_EXAMPLES.py  conftest.py  docker-compose.yaml  init_db.sql  log4j.properties  pyproject.toml  requirements.txt  start_dashboard.bat  start_dashboard.ps1
ad_stream_producer/: __init__.py  config.py  kafka_producer.py  logger.py  producer_service.py  run_producer.py  schema.py
consumer/: __init__.py  avro_deserializer.py  kafka_consumer.py  reconciliation_job.py  run_consumer.py  simple_consumer.py  sink.py  test_run_consumer.py
data_generator/: __init__.py  event_generator.py
metrics/: consumer_metrics.py  metrics.py  openai_test.py  producer_metrics.py
monitoring/: grafana-dashboards-provision.yml  prometheus.yml
monitoring/grafana-dashboards/: kafka-dashboard.json
query_data/: ad_events_aggregation_output.csv  ad_events_late_output.csv  queries.sql  query.py  query_sql.py
schema/: ad_event.avsc  ad_event_update.avsc  ad_event_v1.avsc  ad_event_v2.avsc  ad_event_v3.avsc  event_aggregation_schema.sql
scripts/: run_daily_reconciliation.ps1
tests/: test_avro_deserializer.py  test_avro_serde.py  test_event_generator.py  test_producer_service.py
